# cpp_NN-voicechat-OpenVINO

./: CMakeLists.txt  README.MD  install_sst_ttt.py  install_tts.sh  requirements.txt
face-processing/: idle-open.txt  idle-round.txt  idle-teeth.txt  idle0.txt  smile-open.txt  smile-round.txt  smile-teeth.txt  smile0.txt  smile1.txt
include/: audio_utils.hpp
include/cpp_NN-voicechat-OpenVINO/: face_processing.hpp
src/: audio_utils.cpp  face_processing.cpp  main.cpp
